[package]
name = "example"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "example"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {version = "^0.25.0", features = ["init-if-needed"]}
streamflow-sdk = { path = "../streamflow-sdk", features = ["cpi"]}

