[package]
name = "example"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "example"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {version = "^0.31.1", features = ["init-if-needed"]}
anchor-spl = "^0.31.1"
streamflow-sdk = { path = "../streamflow-sdk", features = ["cpi"]}
