[package]
name = "streamflow-sdk"
version = "0.6.4"
license = "MIT"
description = "Rust SDK to interact with Streamflow protocol"
documentation = "https://docs.rs/streamflow-sdk"
repository = "https://github.com/streamflow-finance/rust-sdk"
edition = "2021"

[features]
no-entrypoint = []
mainnet = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-lang = ">=0.24.2,<1"
anchor-spl = ">=0.24.2,<1"
