[package]
name = "streamflow-sdk"
version = "0.10.0"
license = "MIT"
description = "Rust SDK to interact with Streamflow protocol"
documentation = "https://docs.rs/streamflow-sdk"
repository = "https://github.com/streamflow-finance/rust-sdk"
edition = "2021"

[features]
no-entrypoint = []
devnet = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-lang = "^0.31.1"
anchor-spl = "^0.31.1"
