[package]
name = "streamflow-sdk"
version = "0.13.0-alpha.1"
license = "MIT"
description = "Rust SDK to interact with Streamflow protocol"
documentation = "https://docs.rs/streamflow-sdk"
repository = "https://github.com/streamflow-finance/rust-sdk"
edition = "2021"

[features]
no-entrypoint = []
devnet = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-lang = ">=0.32.1,<1"
anchor-spl = ">=0.32.1,<1"
