[package]
name = "streamflow_rust_sdk"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "streamflow_rust_sdk"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-lang = "0.19.0"
anchor-spl = "0.19.0"
borsh = "0.9.1"
